--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-bin/*
-obj/*
+/bin
+/obj
 Properties/PublishProfiles/Production.pubxml.user
 Properties/PublishProfiles/Production.pubxml.user
 *.testlog
