--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ Properties/PublishProfiles/Production.pubxml.user
 Properties/PublishProfiles/Production.pubxml.user
 *.testlog
 *.json
+.vs/ChecklistAPI/v16/.suo
 .vs/ChecklistAPI/v16/TestStore/1/testlog.manifest
